--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,96 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+  margin: 0px;
+  padding: 6%;
+  font-size: 13px;
+  background-color: hsl(0, 0%, 88%);
+  font-family: "Barlow Semi Condensed";
+  line-height: 1.3;
+}
+
+body section {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 0.8fr;
+}
+
+article {
+  padding: 2.5em;
+  border-radius: 10px;
+}
+
+.daniel-clifford-profile img {
+  border: solid 2px hsl(263, 74%, 46%);
+}
+.patrick-abrams-profile img {
+  border: solid 2px hsl(263, 55%, 52%);
+}
+
+.daniel-clifford-profile {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+  background-color: hsl(263, 55%, 52%);
+  color: white;
+  background-image: url("./images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 80% 10%;
+}
+.jonathan-walters-profile {
+  grid-column: 3;
+  grid-row: 1;
+  background-color: hsl(217, 19%, 35%);
+  color: white;
+}
+.kira-white-profile {
+  grid-column: 4;
+  grid-row: 1 / span 2;
+  background-color: hsl(0, 0%, 100%);
+}
+.jeanette-harmon-profile {
+  grid-column: 1;
+  grid-row: 2;
+  background-color: hsl(0, 0%, 100%);
+}
+
+.patrick-abrams-profile {
+  grid-column: span 2;
+  grid-row: 2;
+  background-color: hsl(219, 29%, 14%);
+  color: white;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-container h2 {
+  margin: 10px 0 0;
+  font-weight: 600;
+  font-size: 16px;
+}
+.header-container p {
+  margin-top: 4px;
+  font-weight: 500;
+  opacity: 50%;
+}
+.profile-icon {
+  border-radius: 50%;
+  margin-right: 16px;
+  height: 40px;
+}
+
+section article p:nth-child(2) {
+  opacity: 70%;
+}
 /* Attribution */
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+  margin-top: 50px;
+  text-align: end;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+/* Responsive styling *******/
