--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ article {
   color: white;
   background-image: url("./images/bg-pattern-quotation.svg");
   background-repeat: no-repeat;
-  background-position: 80% 10%;
+  background-position: 80% 2%;
+  background-size: 10em;
 }
 .jonathan-walters-profile {
   grid-column: 3;
