--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body {
   line-height: 1.3;
 }
 
-body section {
+body main {
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr 0.8fr;
+  grid-template-columns: 0.85fr 1fr 1fr 0.8fr;
 }
 
 article {
@@ -66,13 +66,12 @@ article {
   align-items: center;
 }
 
-.header-container h2 {
+.header-container h3 {
   margin: 10px 0 0;
   font-weight: 600;
-  font-size: 16px;
 }
 .header-container p {
-  margin-top: 4px;
+  margin-top: 0px;
   font-weight: 500;
   opacity: 50%;
 }
@@ -82,7 +81,7 @@ article {
   height: 40px;
 }
 
-section article p:nth-child(2) {
+main article p:nth-child(2) {
   opacity: 70%;
 }
 /* Attribution */
@@ -97,7 +96,7 @@ section article p:nth-child(2) {
 /* Responsive styling *******/
 
 @media screen and (max-width: 760px) {
-  body section {
+  body main {
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr;
