--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,14 @@ article {
   color: white;
 }
 
+.kira-white-profile h2,
+.kira-white-profile h3,
+.kira-white-profile p,
+.jeanette-harmon-profile h2,
+.jeanette-harmon-profile h3,
+.jeanette-harmon-profile p {
+  opacity: 70%;
+}
 .header-container {
   display: flex;
   align-items: center;
