--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,159 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/*Mobile styling*/
+body {
+  margin: 0px;
+  padding: 6%;
+  font-size: 13px;
+  background-color: hsl(0, 0%, 88%);
+  font-family: "Barlow Semi Condensed";
+  line-height: 1.3;
+}
+
+body main {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr;
+}
+
+.daniel-clifford-profile img {
+  border: solid 2px hsl(263, 74%, 46%);
+}
+.patrick-abrams-profile img {
+  border: solid 2px hsl(263, 55%, 52%);
+}
+
+article {
+  padding: 2.5em;
+  border-radius: 10px;
+}
+
+.daniel-clifford-profile {
+  grid-column: 1;
+  grid-row: 1;
+}
+.jonathan-walters-profile {
+  grid-column: 1;
+  grid-row: 2;
+}
+.kira-white-profile {
+  grid-column: 1;
+  grid-row: 3;
+}
+.jeanette-harmon-profile {
+  grid-column: 1;
+  grid-row: 5;
+}
+
+.patrick-abrams-profile {
+  grid-column: 1;
+  grid-row: 4;
+}
+
+.profile-icon {
+  border-radius: 50%;
+  margin-right: 16px;
+  height: 40px;
+}
+
+main article p:nth-child(2) {
+  opacity: 70%;
+}
+
+.kira-white-profile h2,
+.kira-white-profile h3,
+.kira-white-profile p,
+.jeanette-harmon-profile h2,
+.jeanette-harmon-profile h3,
+.jeanette-harmon-profile p {
+  opacity: 70%;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-container h3 {
+  margin: 10px 0 0;
+  font-weight: 600;
+}
+.header-container p {
+  margin-top: 0px;
+  font-weight: 500;
+  opacity: 50%;
+}
+
+.daniel-clifford-profile {
+  background-color: hsl(263, 55%, 52%);
+  color: white;
+  background-image: url("./images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 80% 2%;
+  background-size: 10em;
+}
+.jonathan-walters-profile {
+  background-color: hsl(217, 19%, 35%);
+  color: white;
+}
+.kira-white-profile {
+  background-color: hsl(0, 0%, 100%);
+}
+.jeanette-harmon-profile {
+  background-color: hsl(0, 0%, 100%);
+}
+
+.patrick-abrams-profile {
+  background-color: hsl(219, 29%, 14%);
+  color: white;
+}
+
+.attribution {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+/***************************************************/
+@media screen and (min-width: 761px) {
+  body main {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 0.85fr 1fr 1fr 0.8fr;
+  }
+
+  .daniel-clifford-profile {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+  .jonathan-walters-profile {
+    grid-column: 3;
+    grid-row: 1;
+  }
+  .kira-white-profile {
+    grid-column: 4;
+    grid-row: 1 / span 2;
+  }
+  .jeanette-harmon-profile {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .patrick-abrams-profile {
+    grid-column: span 2;
+    grid-row: 2;
+  }
+
+  .attribution {
+    margin-top: 50px;
+    text-align: end;
+  }
+}
+
+/* Code commented below is the initial css which took a desktop first approach instead of a mobile first approach */
+
+/* @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
   margin: 0px;
@@ -92,7 +247,7 @@ article {
 main article p:nth-child(2) {
   opacity: 70%;
 }
-/* Attribution */
+
 .attribution {
   margin-top: 50px;
   text-align: end;
@@ -101,7 +256,6 @@ main article p:nth-child(2) {
   color: hsl(228, 45%, 44%);
 }
 
-/* Responsive styling *******/
 
 @media screen and (max-width: 760px) {
   body main {
@@ -135,4 +289,4 @@ main article p:nth-child(2) {
   .attribution {
     text-align: center;
   }
-}
+} */
